--- a/css/catalog.css
+++ b/css/catalog.css
@@ -65,108 +65,44 @@ body {
 /**/
 
 
-/* NOTE: promo */
+/* NOTE: catalog promo */
 
-.promo {
-  height: 764px;
+.catalog__promo {
+  height: 148px;
   background: #F1E4E6;
 }
 
-.promo__title {
-  max-width: 377px;
-  padding-left: 20px;
-  border-left: 12px solid #F16D7F;
-}
-
-.promo__wrapper {
+.catalog__promo-wrapper {
   display: flex;
   height: 100%;
-  justify-content: flex-end;
-  align-items: center;
-  background: url("../img/man.png") no-repeat -228px 0;
-}
-
-.promo__decor {
-  color: #F16D7F;
-}
-
-/* NOTE: end: promo */
-
-
-/**/
-
-
-/* NOTE: category */
-
-.category {
-  margin: 100px 0 100px 0;
-}
-
-.category__wrapper {
-  display: flex;
-  flex-wrap: wrap;
-
-  /* NOTE: Свойство gap устанавливает промежутки между строками и столбцами
-           сетки. Это сокращение для row-gap и column-gap */
-  /*gap: 30px;*/
-
-  /* NOTE: за место gap */
   justify-content: space-between;
-}
-
-.category__item {
-  width: 100%;
-  height: 180px;
-}
-
-.category__item:nth-child(1) {
-  background: url("../img/category-woman.png");
-}
-
-.category__item:nth-child(2) {
-  background: url("../img/category-man.png");
-}
-
-.category__item:nth-child(3) {
-  background: url("../img/category-kids.png");
-}
-
-.category__item:nth-child(4) {
-  background: url("../img/category-accesories.png");
-}
-
-.category__item p {
-  font-size: 24px;
-  font-weight: bold;
-  color: #F16D7F;
-  text-align: center;
-  text-transform: uppercase;
-}
-
-.category__item p:not(:last-child) {
-  font-size: 16px;
-  color: white;
-}
-
-.category__item:not(:last-child) {
-  width: 360px;
-  height: 260px;
-
-  /* NOTE: за место gap */
-  margin: 0 0 30px 0;
-}
-
-
-.category__mask {
-  display: flex;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
   align-items: center;
-  background: rgba(33, 22, 22, 0.7);
 }
 
-/* NOTE: end: category */
+.catalog__promo-left {
+  max-width: 194px;
+}
+
+.catalog__promo-left h1 {
+  color: #F16D7F;
+  font-size: 24px;
+  font-weight: 100;
+}
+
+.catalog__promo-right {
+  width: 210px;
+  font-size: 14px;
+}
+
+.catalog__promo-right p {
+  color: #636363;
+}
+
+.catalog__promo-right span {
+  color: #F16D7F;
+}
+
+/* NOTE: end: catalog promo */
 
 
 /**/
@@ -174,39 +110,52 @@ body {
 
 /* NOTE: products */
 
-.products {
+.catalog__products {
   margin: 100px 0 100px 0;
 }
 
-.products__chapter {
+.catalog__products-menu {
+  /*display: flex;*/
   text-align: center;
   margin-bottom: 47px;
+  /*justify-content: space-between;*/
+  /*align-items: center;*/
 }
 
-.products__chapter h1 {
-  font-size: 30px;
+.catalog__products-menu_left {
+  float: left;
 }
 
-.products__chapter p {
-  margin-top: 10px;
-  font-size: 14px;
+.catalog__products-menu_filter {
+  font-size: 17px;
+  color: black;
+}
+
+.catalog__products-select {
   color: #9F9F9F;
+  text-transform: uppercase;
+  /*border: none;*/
+  /*outline: none;*/
+  /*-moz-appearance: none;*/
+  /*-webkit-appearance: none;*/
+  /*appearance: none;*/
 }
 
-.products__wrapper {
+.catalog__products-wrapper {
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
   justify-content: center;
 }
 
-.products__item {
+/* TODO: DRY !!! */
+.product__item {
   width: 360px;
   height: 581px;
   background: #F8F8F8;
 }
 
-.products__img {
+.product__img {
   width: 360px;
   height: 420px;
 }
@@ -237,23 +186,49 @@ body {
   font-size: 16px;
   color: #F16D7F;
 }
+/* TODO: end: DRY !!! */
 
-.products__button {
-  width: 212px;
-  height: 48px;
+.products__pagination {
+  width: 284px;
+  height: 44px;
   margin: 48px auto 0 auto;
+  border: 1px solid #C4C4C4;
+  border-radius: 4px;
 }
 
-.products__button a {
+.pagination {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.pagination a {
   display: block;
-  width: inherit;
+  width: 8px;
+  padding: 0 12px;
   height: inherit;
   text-align: center;
+  font-size: 16px;
+  font-weight: 100;
   line-height: 2.8;
   text-decoration: none;
-  color: #F26376;
-  border: 2px solid #F26376;
+  color: #EBEBEB;
+  transition: background-color .3s;
 }
+
+.pagination a:first-child {
+  color: black;
+}
+
+.pagination a:last-child {
+  color: black;
+}
+
+.pagination a.active {
+  color: #EF5B70;
+}
+
+.pagination a:hover:not(.active) {background-color: #ddd;}
 
 /* NOTE: end: products */
 
@@ -357,7 +332,7 @@ body {
   align-items: center;
 }
 
-.footer__subscribe_search-input {
+.footer__subscribe_right-subscribe .footer__subscribe_search-input {
   width: 210px;
   height: 49px;
   padding-left: 30px;
@@ -368,11 +343,7 @@ body {
   background: #E1E1E1;
 }
 
-.footer__subscribe_search-input:required {
-  /*background-color: lightyellow;*/
-}
-
-.footer__subscribe_search-btn {
+.footer__subscribe_right-subscribe .footer__subscribe_search-btn {
   display: block;
   width: 100px;
   height: 49px;
