--- a/src/sass/pages/catalog/catalog.scss
+++ b/src/sass/pages/catalog/catalog.scss
@@ -1,50 +1,5 @@
 
 
-
-/**/
-
-
-/* NOTE: breadcrumb */
-
-.breadcrumb__chapter {
-  height: 148px;
-  background: #F8F3F4;
-}
-
-.breadcrumb__wrapper {
-  display: flex;
-  height: 100%;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.breadcrumb__left {
-  max-width: 194px;
-}
-
-.breadcrumb__left h1 {
-  margin-top: 0;
-  color: #F16D7F;
-  font-size: 24px;
-  font-weight: 100;
-}
-
-.breadcrumb__right {
-  width: 210px;
-  font-size: 14px;
-}
-
-.breadcrumb__right p {
-  color: #636363;
-}
-
-.breadcrumb__right span {
-  color: #F16D7F;
-}
-
-/* NOTE: end: breadcrumb */
-
-
 /**/
 
 
@@ -67,6 +22,8 @@
 }
 
 .catalog__products-menu_filter {
+  width: 360px;
+  height: 48px;
   font-size: 17px;
   color: black;
 }
@@ -75,11 +32,14 @@
 /* NOTE: filter */
 
 .filter {
+  z-index: 50;
   width: 120px;
   box-sizing: border-box;
   position: relative;
   outline: none;
   border: none;
+  height: 38px;
+  line-height: 3;
 }
 
 /* NOTE: отключить треугольник */
@@ -98,14 +58,21 @@
 }
 
 .filter[open] {
+  width: 360px;
+  height: 48px;
   padding-left: 10px;
   box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
 }
 
 .filter[open] > summary {
+  width: 348px;
+  height: 48px;
+  text-align: left;
   color: #F16D7F;
-  outline: none;
+  background-color: white;
   border: none;
+  line-height: 3;
+  outline: none;
 }
 
 /* NOTE: отключаем треугольник у внутренних блоков */
@@ -224,9 +191,12 @@
 
 .pagination a.active {
   color: #EF5B70;
+  animation: 2s testAnimation;
 }
 
-.pagination a:hover:not(.active) {background-color: #ddd;}
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
+}
 
 /* NOTE: end: products */
 
