--- a/src/sass/components/general/general.scss
+++ b/src/sass/components/general/general.scss
@@ -1,3 +1,12 @@
+$tabletWidth: 800px;
+$mobileWidth: 375px;
+
+$colorRed: #F16D7F;
+
+
+/**/
+
+
 .container {
   /* NOTE: ширина по макету 1140px но задавать ВСЕГДА на +20px больше! */
   max-width: 1140px;
@@ -9,4 +18,11 @@
 
   /* NOTE: up & down, left & right - тут 20px (10+10)  компенсируются отступами */
   padding: 0 10px;
+
+  @media screen and (max-width: $tabletWidth) {
+    max-width: inherit;
+    width: inherit;
+    margin-right: 10px;
+    margin-left: 10px;
+  }
 }
