--- a/src/sass/pages/catalog/catalog.scss
+++ b/src/sass/pages/catalog/catalog.scss
@@ -1,3 +1,4 @@
+@import "../../components/general/general";
 
 
 /**/
@@ -68,7 +69,7 @@
   width: 348px;
   height: 48px;
   text-align: left;
-  color: #F16D7F;
+  color: $colorRed;
   background-color: white;
   border: none;
   line-height: 3;
@@ -106,7 +107,7 @@
 
 .filter__title summary {
   display: block;
-  border-left: 10px solid #F16D7F;
+  border-left: 10px solid $colorRed;
   border-bottom: 1px solid #EBEBEB;
   padding: 10px;
   outline: none;
