--- a/src/sass/pages/index/index.scss
+++ b/src/sass/pages/index/index.scss
@@ -1,4 +1,8 @@
 @import "../../general-mixins";
+@import "../../components/general/general";
+
+
+/**/
 
 
 /* NOTE: promo */
@@ -6,21 +10,63 @@
   height: 764px;
   background: #F1E4E6;
 
-  &__title {
-    max-width: 377px;
-    padding-left: 20px;
-    border-left: 12px solid #F16D7F;
+  @media screen and (max-width: $tabletWidth) {
+    height: 367px;
   }
 
   &__wrapper {
-    @include flexCenterBlock(flex-end);
+    @include flexCenterBlock(space-between);
 
     height: 100%;
-    background: url("../../src/img/man.png") no-repeat -228px 0;
+  }
+
+  &__image {
+    width: 394px;
+    height: 100%;
+
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    @media screen and (max-width: $mobileWidth) {
+      display: none;
+    }
+  }
+
+  &__title {
+    max-width: 377px;
+    margin-right: 140px;
+    padding-left: 20px;
+    border-left: 12px solid $colorRed;
+
+    @media screen and (max-width: $tabletWidth) {
+      margin-right: 32px;
+    }
+
+    @media screen and (max-width: $mobileWidth) {
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
 
   &__decor {
-    color: #F16D7F;
+    &-title {
+      font-size: 36px;
+    }
+
+    &-subtitle {
+      font-size: 24px;
+
+      @media screen and (max-width: $tabletWidth) {
+        font-size: 19px;
+      }
+    }
+
+    &-red {
+      color: $colorRed;
+    }
   }
 }
 /* NOTE: end: promo */
@@ -50,25 +96,25 @@
     height: 180px;
 
     &:nth-child(1) {
-      background: url("../../src/img/category-woman.png");
+      background: url("../../src/img/category-woman.png") no-repeat center;
     }
 
     &:nth-child(2) {
-      background: url("../../src/img/category-man.png");
+      background: url("../../src/img/category-man.png") no-repeat center;
     }
 
     &:nth-child(3) {
-      background: url("../../src/img/category-kids.png");
+      background: url("../../src/img/category-kids.png") no-repeat center;
     }
 
     &:nth-child(4) {
-      background: url("../../src/img/category-accesories.png");
+      background: url("../../src/img/category-accesories.png") no-repeat center;
     }
 
     & p {
       font-size: 24px;
       font-weight: bold;
-      color: #F16D7F;
+      color: $colorRed;
       text-align: center;
       text-transform: uppercase;
 
@@ -84,6 +130,21 @@
 
       /* NOTE: за место gap */
       margin: 0 0 30px 0;
+
+      @media screen and (max-width: $tabletWidth) {
+        width: 232px;
+        height: 167px;
+      }
+
+      @media screen and (max-width: 740px) {
+        width: 100%;
+        object-fit: cover;
+      }
+
+      @media screen and (max-width: $mobileWidth) {
+        width: 343px;
+        height: 247px;
+      }
     }
   }
 
