--- a/src/sass/pages/product/product.scss
+++ b/src/sass/pages/product/product.scss
@@ -1,3 +1,9 @@
+@import "../../components/general/general";
+
+
+/**/
+
+
 /* NOTE: product slider */
 .product__slider {
   display: flex;
@@ -24,7 +30,7 @@
     }
 
     & a:hover {
-      color: #F16D7F
+      color: $colorRed;
     }
   }
 
@@ -66,7 +72,7 @@
     & p {
       font-size: 14px;
       font-weight: 100;
-      color: #F16D7F;
+      color: $colorRed;
     }
   }
 
