--- a/src/sass/ui-kit/breadcrumb/breadcrumb.scss
+++ b/src/sass/ui-kit/breadcrumb/breadcrumb.scss
@@ -1,3 +1,6 @@
+@import "../../components/general/general";
+
+
 /* NOTE: создаем анимацию */
 @keyframes leftAnimation {
 
@@ -101,7 +104,7 @@
 
     & h1 {
       margin-top: 0;
-      color: #F16D7F;
+      color: $colorRed;
       font-size: 24px;
       font-weight: 100;
 
@@ -122,7 +125,7 @@
     }
 
     & span {
-      color: #F16D7F;
+      color: $colorRed;
     }
   }
 }
