--- a/src/sass/components/header/header.scss
+++ b/src/sass/components/header/header.scss
@@ -1,5 +1,5 @@
 @import "../../general-mixins";
-@import "../../components/general/general";
+@import "../../settings";
 
 
 /**/
@@ -16,7 +16,25 @@
   }
 
   &__right {
+    @include flexCenterBlock(space-between);
 
+    margin-right: 20px;
+  }
+
+  &__center {
+    @media screen and (max-width: $tabletWidth) {
+      display: none;
+    }
+
+    & a {
+      font-size: 14px;
+      text-decoration: none;
+      color: white;
+    }
+
+    & a:not(:last-child) {
+      margin-right: 14px;
+    }
   }
 
   &__left {
@@ -29,7 +47,7 @@
   }
 
   /* NOTE: задать всем елементам КРОМЕ последнего.... */
-  &__item {
+  &__item:not(:last-child), &__cart {
     margin-right: 33px;
 
     @media screen and (max-width: $mobileWidth) {
@@ -40,6 +58,34 @@
       &:nth-child(3) {
         display: none;
       }
+    }
+  }
+
+  &__cart {
+    @include userSelectDisabled();
+
+    /* NOTE: для абсолютного позиционирования блока ...-amount */
+    position: relative;
+    width: 29px;
+    height: 29px;
+
+    display: block;
+
+    & img {
+      background-size: cover;
+    }
+
+    &-amount {
+      @include flexCenterBlock();
+
+      position: absolute;
+      top: -7px;
+      right: -14px;
+      width: 19px;
+      height: 19px;
+      color: white;
+      border-radius: 50%;
+      background: $colorRed;
     }
   }
 }
