--- a/src/sass/pages/cart/cart.scss
+++ b/src/sass/pages/cart/cart.scss
@@ -17,10 +17,21 @@ $colorRed: #EF5B70;
 
   &__wrapper {
     @include flexCenterBlock(space-between);
+
+    @media screen and (max-width: 1140px) {
+      flex-direction: column;
+    }
   }
 
   &__left {
     width: 652px;
+
+    @media screen and (max-width: 1140px) {
+      @include flexCenterBlock(center);
+
+      margin-bottom: 57px;
+      flex-direction: column;
+    }
   }
 
   &__product {
@@ -29,34 +40,65 @@ $colorRed: #EF5B70;
     margin-bottom: 40px;
     box-shadow: (17px 19px 24px rgba(0, 0, 0, 0.13));
 
+    @media screen and (max-width: 740px) {
+      width: 358px;
+      min-height: 188px;
+    }
+
     &-info {
       float: left;
       margin-top: 22px;
+
+      @media screen and (max-width: 740px) {
+        width: 143px;
+        height: 143px;
+      }
     }
 
     &-image, &-image img {
       float: left;
       width: 262px;
       height: $heightCartProductBlock;
+
+      @media screen and (max-width: 740px) {
+        width: 143px;
+        height: 188px;
+      }
     }
 
     &-title {
       width: 262px;
       min-height: 58px;
-      margin-left: 30px;
+      margin-left: 28px;
       margin-bottom: 42px;
+
+      @media screen and (max-width: 740px) {
+        width: 123px;
+        min-height: 35px;
+        margin-bottom: 26px;
+      }
 
       & p {
         font-size: 24px;
+
+        @media screen and (max-width: 740px) {
+         font-size: 16px;
+        }
       }
     }
 
     &-details {
       width: 166px;
       min-height: 122px;
-      margin-left: 30px;
+      margin-left: 28px;
       font-size: 22px;
       color: $colorGray;
+
+      @media screen and (max-width: 740px) {
+        width: 120px;
+        min-height: 75px;
+        font-size: 14px;
+      }
 
       & p:not(:last-child) {
         margin-top: 6px;
@@ -75,6 +117,13 @@ $colorRed: #EF5B70;
         height: 25px;
         text-align: center;
         color: $colorGray;
+
+        @media screen and (max-width: 740px) {
+          width: 24px;
+          height: 15px;
+          margin-top: 4px;
+          font-size: 10px;
+        }
       }
     }
 
@@ -93,8 +142,17 @@ $colorRed: #EF5B70;
     &-buttons {
       @include flexCenterBlock(space-between);
 
+      //width: 225px;
       height: 50px;
       margin-top: 72px;
+
+      @media screen and (max-width: 1140px) {
+        justify-content: center;
+      }
+
+      @media screen and (max-width: 740px) {
+        margin-top: 30px;
+      }
 
       & a {
         width: 225px;
@@ -104,6 +162,18 @@ $colorRed: #EF5B70;
         color: $colorGray;
         border: 1px solid #A4A4A4;
         line-height: 3;
+
+        @media screen and (max-width: 1140px) {
+          &:not(:last-child) {
+            margin-right: 48px;
+          }
+        }
+
+        @media screen and (max-width: 740px) {
+          width: 175px;
+          height: 33px;
+          font-size: 12px;
+        }
       }
     }
   }
@@ -114,12 +184,29 @@ $colorRed: #EF5B70;
     width: 541px;
     min-height: 541px;
     flex-direction: column;
+
+    @media screen and (max-width: 1140px) {
+      display: block;
+      width: 733px;
+      min-height: 280px;
+    }
+
+
+    @media screen and (max-width: 740px) {
+      @include flexCenterBlock(center);
+
+      width: 100%;
+    }
   }
 
   &__feedback {
     width: 360px;
     min-height: 272px;
     margin-bottom: 58px;
+
+    @media screen and (max-width: 1140px) {
+      float: left;
+    }
 
     &-title {
       margin-bottom: 20px;
@@ -156,6 +243,15 @@ $colorRed: #EF5B70;
     min-height: 214px;
     background: #F5F3F3;
     flex-direction: column;
+
+    @media screen and (max-width: 1140px) {
+      float: right;
+      margin-top: 48px;
+    }
+
+    @media screen and (max-width: 740px) {
+      margin-top: 0;
+    }
 
     &-price {
       height: 82px;
