--- a/src/sass/pages/product/product.scss
+++ b/src/sass/pages/product/product.scss
@@ -1,4 +1,5 @@
-@import "../../components/general/general";
+@import "../../general-mixins";
+@import "../../settings";
 
 
 /**/
@@ -12,6 +13,10 @@
   background: #EAEAEA;
   justify-content: space-between;
   align-items: center;
+
+  @media screen and (max-width: 740px) {
+    height: 454px;
+  }
 
   &-control {
     width: 47px;
@@ -39,6 +44,18 @@
     width: 597px;
     height: 724px;
     margin-top: -11px;
+
+    @media screen and (max-width: 740px) {
+      @include flexCenterBlock();
+
+      height: 100%;
+    }
+
+    & img {
+      @media screen and (max-width: 740px) {
+        width: 100%;
+      }
+    }
   }
 }
 /* NOTE: end: product slider */
@@ -54,13 +71,17 @@
     display: flex;
     z-index: 2;
     height: 601px;
-    margin-top: -64px;
-    margin-bottom: 128px;
+    margin-top: -64px !important;
+    margin-bottom: 128px !important;
     border: 1px solid #EAEAEA;
     background: white;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+
+    @media screen and (max-width: 1140px) {
+      margin-top: 0 !important;
+    }
   }
 
   &__type {
@@ -103,6 +124,10 @@
     text-align: center;
     margin-bottom: 22px;
 
+    @media screen and (max-width: 740px) {
+      width: auto;
+    }
+
     & p {
       color: #5E5E5E;
     }
@@ -127,8 +152,13 @@
     left: 50%;
     width: 642px;
     height: 1px;
-    margin-left: -321px;
-    background: #EAEAEA
+    margin-left: calc(-642px / 2);
+    background: #EAEAEA;
+
+    @media screen and (max-width: 740px) {
+      width: 175px;
+      margin-left: calc(-175px / 2);
+    }
   }
 
   &__parameters {
@@ -147,10 +177,10 @@
     -moz-appearance: none;
     -webkit-appearance: none;
     appearance: none;
-  }
 
-  &__select:not(:last-child) {
-    margin-right: 22px;
+    &:not(:last-child) {
+      margin-right: 22px;
+    }
   }
 
   &__button {
@@ -179,13 +209,45 @@
 .product {
   &__recommended {
     width: 100%;
-    height: auto;
-    margin-bottom: 128px;
+    height: 581px;
+    margin-bottom: 128px !important;
+
+    @media screen and (max-width: 1140px) {
+      width: 768px;
+    }
+
+    @media screen and (max-width: 740px) {
+      width: auto;
+      height: 100%;
+    }
 
     &-wrapper {
-      display: flex;
+      @include flexCenterBlock(flex-start);
+
       gap: 30px;
-      justify-content: center;
+
+      @media screen and (max-width: 1140px) {
+        display: block;
+        width: 768px;
+        height: 581px;
+        overflow: hidden;
+
+        & .products__item {
+          float: left;
+
+          &:not(:last-child) {
+            margin-right: 24px;
+          }
+        }
+      }
+
+      @media screen and (max-width: 740px) {
+        @include flexCenterBlock();
+
+        width: auto;
+        height: 100%;
+        flex-direction: column;
+      }
     }
   }
 
