--- a/src/sass/components/footer/footer.scss
+++ b/src/sass/components/footer/footer.scss
@@ -77,6 +77,7 @@
       width: 210px;
       height: 49px;
       padding-left: 30px;
+      padding-right: 10px;
       font-size: 14px;
       border-bottom-left-radius: 24px;
       border-top-left-radius: 24px;
